# kiss-resume

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: resume.md
resume/: builder.py  cli.py
resume/data/: config.yaml  style.css
scripts/: check.sh  fix.sh
tests/: test_builder.py  test_cli.py  test_pdf_extraction.py  test_smoke.py
