[project]
name = "resume"
version = "0.1.0"
description = "Build a tagged PDF resume from Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.7",
    "weasyprint>=60",
    "pyyaml>=6.0",
]

[project.scripts]
# Installable entry point → `uv run resume ...` (and on `uv tool install .`,
# a `resume` binary on PATH). "module.path:function".
resume = "resume.cli:main"

[dependency-groups]
# Dev tools — installed by `uv sync`, excluded from the published wheel.
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

# --- Formatter + linter (ruff) ---
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
# pycodestyle/pyflakes (E/F/W) + import sorting (I), modern syntax (UP),
# bugbear (B), comprehensions (C4), simplifications (SIM).
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is the formatter's job
    "SIM105", # contextlib.suppress less readable than try/except for error logs
]

# --- Static analysis (mypy) ---
[tool.mypy]
python_version = "3.13"
files = ["resume", "tests"]   # add root-level scripts here as you create them
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true     # type-check every function body...
disallow_untyped_defs = true  # ...and require annotations on definitions
ignore_missing_imports = true # for stub-less third-party deps

# --- Static analysis (pyright) ---
# Catches diagnostics mypy can't, e.g. reportPrivateImportUsage. Keep the
# include list in sync with [tool.mypy].files.
[tool.pyright]
pythonVersion = "3.13"
include = ["resume", "tests"]
exclude = [".venv", "__pycache__", "build", "dist"]
typeCheckingMode = "standard"

# --- Test runner (pytest) ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

# --- Build: makes the package installable / entry points work ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship only the package; root-level scripts stay run-as-scripts.
packages = ["resume"]
